[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Quantum-Correlations-Visualized"
version = "0.1.9"
authors = [
    {name="Barry Schwartz", email="sortsmill@crudfactory.com"}
]
description = "Visual Simulation of a Two-Channel Quantum Bell Test Experiment"
readme = "README.txt"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: POSIX",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Physics",
    "Environment :: X11 Applications",
    "Natural Language :: English",
]
dependencies = [
    "pyglet >= 2.0.9",
]

[project.urls]
"Homepage" = "https://github.com/chemoelectric/eprb_signal_correlations"
"Author-on-Mastodon" = "https://masto.ai/@chemoelectric"

[project.scripts]
Quantum-Correlations-Visualized = "Quantum_Correlations_Visualized:main"
